syntax = "proto3";
package rpc;

option go_package = "server/pb/rpc";       //这里是go的编译选项
import "chat.proto";      //如果用到了依赖，proto3需要指定依赖哪个proto文件
import "common.proto";


message ReqJoinChatGroup{
  chat.ChatGroup Group = 1;
  string Tag = 2;
  common.PlayerBaseInfo Player=3;
}

message RespJoinChatGroup{
  common.ErrorCode ErrCode = 1;
}

message ReqLeaveChatGroup{
  chat.ChatGroup Group = 1;
  string Tag = 2;
  string PlayerGuid=3;
}

message RespLeaveChatGroup{
  common.ErrorCode ErrCode = 1;
}